[package]
name = "monitor"
version = "0.1.0"
edition = "2023"

[dependencies]
futures = "0.3.29"
hyper = "1.0.1"
lazy_static = "1.3"
log = "0.4"
pretty_env_logger = "0.5.0"
serde = "1.0"
serde_derive = "1.0"
tera = "1.19.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.6.1"